--- a/client/package.json
+++ b/client/package.json
@@ -10,8 +10,12 @@
     "autoprefixer": "^9.8.6",
     "axios": "^0.21.1",
     "formik": "^2.2.6",
+    "install": "^0.13.0",
     "js-cookie": "^2.2.1",
+    "moment": "^2.29.1",
+    "npm": "^6.14.11",
     "postcss": "^7.0.35",
+    "public-ip": "^4.0.3",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-notification-system": "^0.4.0",
@@ -50,6 +54,7 @@
   },
   "devDependencies": {
     "@babel/preset-react": "^7.12.10",
-    "babel-plugin-react-html-attrs": "^3.0.5"
+    "babel-plugin-react-html-attrs": "^3.0.5",
+    "dotenv-webpack": "^6.0.0"
   }
 }
