--- a/client/package.json
+++ b/client/package.json
@@ -12,6 +12,7 @@
     "formik": "^2.2.6",
     "install": "^0.13.0",
     "js-cookie": "^2.2.1",
+    "jwt-decode": "^3.1.2",
     "moment": "^2.29.1",
     "npm": "^6.14.11",
     "postcss": "^7.0.35",
