--- a/server/package.json
+++ b/server/package.json
@@ -20,6 +20,7 @@
     "moment": "^2.29.1",
     "mysql": "^2.18.1",
     "mysql2": "^2.2.5",
-    "sequelize": "^6.4.0"
+    "sequelize": "^6.4.0",
+    "uuid": "^8.3.2"
   }
 }
