--- a/server/.env
+++ b/server/.env
@@ -3,4 +3,5 @@ DB_USER = root
 DB_HOST = localhost
 DB_DIALECT = mysql
 PORT = 8080
-JWT_SECRET = superpasswordsecretrahasia
+JWT_SECRET = superpasswordsecretrahasiaterjaga
+JWT_REFRESH_SECRET = refreshrahasiaterjagasuperpassword
